--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the price per sqft<br> 
+    What is the price per sqft calculator?<br>
+    The price per square foot calculator is a tool that measures the price per square foot to compare the cost of homes.<br>
+    How to calculate price per sqft?<br>
+    To calculate price per sqft you should use the following formula:<br>
+    price per sqft = price or rent / square footage<br>
+    Why use price per sqft calculator?<br>
+    The price per square foot calculator is used in order to determine the price per square foot to compare the cost of homes.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
